Correccion archivo de ambiente

--- a/back/.env
+++ b/back/.env
@@ -3,7 +3,7 @@ RUTAOUT=archivosOUT/
 TIMEEXPIRES=60
 PORT=80
 APPLICATION_NAME=ACC
-BUCKET_NAME=jsoncaliche
-AWSID=AKIA2WAQ6KRTI7SGO3NK
-AWSSECRET=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
-EMAILFROM=jjad85@gmail.com
+BUCKET_NAME=acc-pt
+AWSID=AKIAQMM5EU3QUWPLMGT2
+AWSSECRET=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
+EMAILFROM=caorrego91@gmail.com
